# Log_Series_Scrapper

./: pyproject.toml
notebooks/: dev.ipynb
