[project]
name = "log-series-scrapper"
version = "0.1.0"
description = ""
authors = [
    {name = "Tiago Gonçalves",email = "tiago@tiagogoncalves.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
